Subir botão do whatsapp

--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
 
 <body>
 
+   <!--====================== Botão do whatsapp =========================-->
+
+   <a class="whatsapp-link" href="https://wa.me/5521983578774" target="_blank">
+    <img src="assets/icon-whats.svg" alt="" srcset="">
+</a>
+
   <!-- ===================== Cabeçalho ============================= -->
 
   <header>
