Feat:Texto e imagem do banner do meio.

--- a/index.html
+++ b/index.html
@@ -18,10 +18,6 @@
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 
-
-
-
-
 <body>
 
    <!--====================== Botão do whatsapp =========================-->
@@ -50,6 +46,23 @@
       </div>
     </nav>
   </header>
+  
+  <!-- ===================== Carrossel e Banners ============================= -->
+
+  <main> 
+    <section>
+      <div class="middleBanner">
+        <div class="middleTxt">
+          <h1>Viagens para empresas</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit dignissimos eos cupiditate aliquid ullam, cumque necessitatibus consequatur ex, deleniti incidunt molestias id qui veritatis obcaecati voluptatum error? Aperiam, facere natus!</p>
+        </div>
+        <div class="middleImg">
+          <img src="assets/frotaVans.png" alt="Frota de Vans">
+        </div>
+      </div>
+    </section>
+
+  </main>
 
   <!-- ===================== Footer para todas as páginas ============================= -->
 
