--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Russo+One&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <style>@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Russo+One&display=swap');</style>
 </head>
 
 <body>
@@ -47,7 +47,7 @@
     </nav>
   </header>
   
-  <!-- ===================== Carrossel e Banners ============================= -->
+  <!-- =========================== Banners ============================================ -->
 
   <main> 
     <section>
@@ -61,7 +61,6 @@
         </div>
       </div>
     </section>
-
   </main>
 
   <!-- ===================== Footer para todas as páginas ============================= -->
