--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <h1>Conforto e <br>
                   segurança</h1>
                   <p>
-                    <a class="btn btn-lg btn-warning float-right" href="#" role="button"> Conheça mais</a>
+                    <a class="btn btn-lg btn-warning float-right" href="#" role="button"> Conheça mAis</a>
 
                   </p>
 
