--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
 
   <main> 
     <section>
+      <div class="div-vazia">
+        vazio
+      </div>
       <div class="middleBanner">
         <div class="middleTxt">
           <h1>Viagens para empresas</h1>
