--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/home.css">
   <link rel="shortcut icon" href="assets/favicon.svg" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,7 +39,7 @@
         <li class="item-list"><a class="nav-link" href="#">Home</a></li>
         <li class="item-list"><a class="nav-link" href="#">Quem Somos</a></li>
         <li class="item-list"><a class="nav-link" href="#">Serviços</a></li>
-        <li class="item-list"><a class="nav-link" href="#">Contato</a></li>
+        <li class="item-list"><a class="nav-link" href="pages/contato.html">Contato</a></li>
       </ul>
       <div class="menu-icon">
         <div id="line-one" class="line-1"></div>
@@ -133,7 +134,7 @@
               <ul id="lista-footer">
                 <li><a href="quemsomos.html">Quem Somos</a></li>
                 <li><a href="servicos.html">Serviços</a></li>
-                <li><a href="contato.html">Contato</a></li>
+                <li><a href="pages/contato.html">Contato</a></li>
                 <li><a href="termos e privacidade.html">Termos e Privacidade</a></li>
               </ul>
             </div>
