--- a/pages/termos.html
+++ b/pages/termos.html
@@ -6,8 +6,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="css/termos.css">
+  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="/css/termos.css">
   <link rel="shortcut icon" href="assets/favicon.svg" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,21 +24,21 @@
   <!--====================== Botão do whatsapp =========================-->
 
   <a class="whatsapp-link" href="https://wa.me/5521983578774" target="_blank">
-    <img src="assets/icon-whats.svg" alt="" srcset="">
+    <img src="/assets/icon-whats.svg" alt="" srcset="">
 </a>
 
   <!-- ===================== Cabeçalho ============================= -->
 
   <header>
     <section>
-      <a href="#"><img src="assets/logo.svg" alt="NKLOGO"></a>
+      <a href="#"><img src="/assets/logo.svg" alt="NKLOGO"></a>
     </section>
     <nav>
       <ul id="nav-list" class="nav-list">
-        <li class="item-list"><a class="nav-link" href="#">Home</a></li>
-        <li class="item-list"><a class="nav-link" href="#">Quem Somos</a></li>
-        <li class="item-list"><a class="nav-link" href="#">Serviços</a></li>
-        <li class="item-list"><a class="nav-link" href="#">Contato</a></li>
+        <li class="item-list"><a class="nav-link" href="/index.html">Home</a></li>
+        <li class="item-list"><a class="nav-link" href="quemsomos.html">Quem Somos</a></li>
+        <li class="item-list"><a class="nav-link" href="servicos.html">Serviços</a></li>
+        <li class="item-list"><a class="nav-link" href="contato.html">Contato</a></li>
       </ul>
       <div class="menu-icon">
         <div id="line-one" class="line-1"></div>
@@ -290,21 +290,21 @@
       <div class="container">
         <div class="row">
           <div class="col-sm">
-            <h1 id="titulo-footer"><a href="index.html">NK</a></h1>
+            <h1 id="titulo-footer"><a href="/index.html">NK</a></h1>
             <div class="col-sm">
               <ul id="lista-footer">
                 <li><a href="quemsomos.html">Quem Somos</a></li>
                 <li><a href="servicos.html">Serviços</a></li>
                 <li><a href="contato.html">Contato</a></li>
-                <li><a href="termos e privacidade.html">Termos e Privacidade</a></li>
+                <li><a href="termos.html">Termos e Privacidade</a></li>
               </ul>
             </div>
           </div>
           <div id="icones-footer" class="col-sm">
-            <a href="#"><img src="assets/icon-whats.svg" alt=""></a>
-            <a href="#"><img src="assets/icon-email.svg" alt=""></a>
-            <a href="#"><img src="assets/icon-insta.svg" alt=""></a>
-            <a href="#"><img src="assets/icon-face.svg" alt=""></a>
+            <a href="#"><img src="/assets/icon-whats.svg" alt=""></a>
+            <a href="#"><img src="/assets/icon-email.svg" alt=""></a>
+            <a href="#"><img src="/assets/icon-insta.svg" alt=""></a>
+            <a href="#"><img src="/assets/icon-face.svg" alt=""></a>
           </div>
         </div>
       </div>
@@ -319,9 +319,9 @@
             <h2>Desenvolvido por <span>Pedro Andrade</span></h2>
           </div>
           <div id="jaba-icons" class="col-sm">
-            <a href="#"><img src="assets/jaba-whats.svg" alt=""></a>
-            <a href="#"><img src="assets/jaba-github.svg" alt=""></a>
-            <a href="#"><img src="assets/jaba-insta.svg" alt=""></a>
+            <a href="#"><img src="/assets/jaba-whats.svg" alt=""></a>
+            <a href="#"><img src="/assets/jaba-github.svg" alt=""></a>
+            <a href="#"><img src="/assets/jaba-insta.svg" alt=""></a>
           </div>
         </div>
       </div>
@@ -331,7 +331,7 @@
   <!-- ===================== Javascript ============================= -->
 
 
-  <script src="js/menu.js"></script>
+  <script src="/js/menu.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
