Ajuste de estrutura

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     </section>
     <nav>
       <ul id="nav-list" class="nav-list">
-        <li class="item-list"><a class="nav-link" href="#">Home</a></li>
-        <li class="item-list"><a class="nav-link" href="#">Quem Somos</a></li>
-        <li class="item-list"><a class="nav-link" href="#">Serviços</a></li>
+        <li class="item-list"><a class="nav-link" href="index.html">Home</a></li>
+        <li class="item-list"><a class="nav-link" href="pages/quemsomos.html">Quem Somos</a></li>
+        <li class="item-list"><a class="nav-link" href="pages/servicos.html">Serviços</a></li>
         <li class="item-list"><a class="nav-link" href="pages/contato.html">Contato</a></li>
       </ul>
       <div class="menu-icon">
