--- a/pages/contato.html
+++ b/pages/contato.html
@@ -22,11 +22,11 @@
 
 <body>
 
-   <!--====================== Botão do whatsapp =========================-->
+  <!--====================== Botão do whatsapp =========================-->
 
-   <a class="whatsapp-link" href="https://wa.me/5521983578774" target="_blank">
+  <a class="whatsapp-link" href="https://wa.me/5521983578774" target="_blank">
     <img src="/assets/icon-whats.svg" alt="" srcset="">
-</a>
+  </a>
 
   <!-- ===================== Cabeçalho ============================= -->
 
@@ -48,10 +48,69 @@
       </div>
     </nav>
   </header>
-  
-  <!-- =========================== Principal ============================================ -->
 
-  
+  <main>
+
+    <!-- =========================== Banner ============================================ -->
+    <section id="section01">
+      <h1>Contato</h1>
+    </section>
+
+    <!-- =========================== article 01 ============================================ -->
+
+    <article id="article01">
+      <section>
+        <div>
+          <h2>Nos siga nas nossas redes sociais</h2>
+        </div>
+        <div id="img-redes">
+          <a href=""><img src="/assets/whatsblue.svg" alt=""></a>
+          <a href=""><img src="/assets/instablue.svg" alt=""></a>
+          <a href=""><img src="/assets/faceblue.svg" alt=""></a>
+        </div>
+      </section>
+      <aside id="curtir">
+        <img src="/assets/joia.svg" alt="">
+      </aside>
+    </article>
+
+    <!-- =========================== article 02 ============================================ -->
+
+    <article id="article02">
+      <section class="formulario">
+        <h2>Fale conosco</h2>
+        <form action="https://formsubmit.co/pedrofreitasdeandrade@gmail.com" method="POST" class="form d-400">
+          <label>
+            <input type="text" name="Nome" placeholder="Seu nome" required autocomplete>
+          </label>
+          <label>
+            <input type="email" name="Email" placeholder="seu email@email.com" required autocomplete="">
+          </label>
+          <label>
+            <textarea name="Mensagem" placeholder="Deixe sua mensagem"></textarea>
+          </label>
+          <input type="hidden" name="_captcha" value="false">
+          <button type="submit">
+            Enviar
+          </button>
+        </form>
+      </section>
+      <section class="mapa">
+        <div class="mapouter">
+          <div class="gmap_canvas"><iframe width="524" height="641" id="gmap_canvas"
+              src="https://maps.google.com/maps?q=RUA%20NORONHA%20TORREZ%C3%83O,%2020%20%E2%80%93%20SANTA%20ROSA%20%E2%80%93%20NITEROI&t=&z=13&ie=UTF8&iwloc=&output=embed"
+              frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><br>
+          </div>
+        </div>
+        <p>NICKTHY FRETAMENTO E TURISMO LTDA- M.E <br>
+          Endereço: RUA NORONHA TORREZÃO, 20 – SANTA ROSA – NITEROI <br>
+          RJ CEP: 24240-185 <br>
+          Tel: ( 021 ) 96432-2624 / 96419-5595 97289-3404</p>
+      </section>
+
+      <!-- =============================================================================== -->
+
+  </main>
 
   <!-- ===================== Footer para todas as páginas ============================= -->
 
