--- a/pages/contato.html
+++ b/pages/contato.html
@@ -96,12 +96,10 @@
         </form>
       </section>
       <section class="mapa">
-        <div class="mapouter">
-          <div class="gmap_canvas"><iframe width="524" height="641" id="gmap_canvas"
-              src="https://maps.google.com/maps?q=RUA%20NORONHA%20TORREZ%C3%83O,%2020%20%E2%80%93%20SANTA%20ROSA%20%E2%80%93%20NITEROI&t=&z=13&ie=UTF8&iwloc=&output=embed"
-              frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><br>
-          </div>
-        </div>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3675.411886936005!2d-43.10233414295012!3d-22.89817391008284!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9983f15f1dd263%3A0x7875d776430bd72f!2sR.%20Noronha%20Torrez%C3%A3o%2C%2020%20-%20Santa%20Rosa%2C%20Niter%C3%B3i%20-%20RJ%2C%2024240-182!5e0!3m2!1spt-BR!2sbr!4v1668973734682!5m2!1spt-BR!2sbr"
+          style="border:0;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
         <p>NICKTHY FRETAMENTO E TURISMO LTDA- M.E <br>
           Endereço: RUA NORONHA TORREZÃO, 20 – SANTA ROSA – NITEROI <br>
           RJ CEP: 24240-185 <br>
