--- a/index.html
+++ b/index.html
@@ -126,7 +126,15 @@
       <div class="sec3">
         <div class="in-sec3">
           <div class="logos">
-
+            <div class="box1">
+              <img src="assets/image 3.svg" alt="">
+              <img src="assets/image 4.svg" alt="">
+              <img src="assets/image 5.svg" alt="">
+            </div>
+            <div class="box2">
+              <img src="assets/image 6.svg" alt="">
+              <img src="assets/image 7.svg" alt="">              
+            </div>
           </div>
           <div class="bloco2">
             <p>Preocupados com <br>
