--- a/index.html
+++ b/index.html
@@ -127,13 +127,13 @@
         <div class="in-sec3">
           <div class="logos">
             <div class="box1">
-              <img src="assets/image 3.svg" alt="">
-              <img src="assets/image 4.svg" alt="">
-              <img src="assets/image 5.svg" alt="">
+              <img src="assets/image 3.svg" alt="logoEloM7">
+              <img src="assets/image 4.svg" alt="LogoCadastur">
+              <img src="assets/image 5.svg" alt="LogoDetro">
             </div>
             <div class="box2">
-              <img src="assets/image 6.svg" alt="">
-              <img src="assets/image 7.svg" alt="">              
+              <img src="assets/image 6.svg" alt="LogoSeloVerde">
+              <img src="assets/image 7.svg" alt="LogoANTT">              
             </div>
           </div>
           <div class="bloco2">
