Feat:Adicionado o texto da segunda imagem

--- a/quemsomos.html
+++ b/quemsomos.html
@@ -56,13 +56,21 @@
         </section>
         
         <section class="middleBannerSecondPage">
-            <div class="middleBannerImgContainerSecondPage">
-                <img class="middleBannerImgSecondPage" src="assets/Quem Somos/middleBanner.png" alt="Exemplo de Imagem">
-            </div>
-            <div>
-
+            <div class="middleBannerContainerSecondPage">
+                <div class="middleBannerTxtSecondPage">
+                    <p>
+                        Após estudos e análises do mercado no segmento de Transporte rodoviário de passageiros, constatamos que a segurança e qualidade são os principais fatores, tornando-se exigências primordiais dos clientes que utilizam tais serviços. Baseando-se nestes princípios a empresa NICKTHY FRETAMENTO E TURISMO LTDA- M.E foi criada, para proporcionar aos nossos clientes o que é fundamental no ramo. SEGURANÇA E QUALIDADE. Dispomos de estrutura veículos própios,veículos em parceria, representantes e agentes, direcionados para atuar em toda area de transporte de passageiros. A NICKTHY FRETAMENTO E TURISMO LTDA- M.E acredita reunir condições para atender as necessidades de sua empresa e a certeza de que formaremos muito mais que uma relação de negócios, mas uma parceria de sucesso. 
+                    </p>
+                    <h2 class="middleBannerTitleSecondPage">
+                        -Atenciosamente, Luiz Miralhes.
+                    </h2>
+                </div>
+                <div>
+                    <img class="middleBannerImgSecondPage" src="assets/Quem Somos/middleBanner.png" alt="Exemplo de Imagem">
+                </div>
             </div>
         </section>
+
     </main>
     <footer>
         <div class="rodape">
