Feat:Textos do final da página

--- a/quemsomos.html
+++ b/quemsomos.html
@@ -43,7 +43,6 @@
                 <img class="mainBannerImgSecondPage" src="assets/Quem Somos/firstBanner.png" alt="Exemplo de Imagem">
             </div>
         </section>
-
         <section class="middleTxtSecondPage">
             <div class="middleTxtContainerSecondPage"> 
                 <div class="middleTxtTitleSecondPage">
@@ -54,7 +53,6 @@
                 </div>
             </div>
         </section>
-        
         <section class="middleBannerSecondPage">
             <div class="middleBannerContainerSecondPage">
                 <div class="middleBannerTxtSecondPage">
@@ -68,6 +66,16 @@
                 <div>
                     <img class="middleBannerImgSecondPage" src="assets/Quem Somos/middleBanner.png" alt="Exemplo de Imagem">
                 </div>
+            </div>
+        </section>
+        <section class="bottomTxtSecondPage">
+            <div class="bottomTxtContainerSecondPage">
+                <h3 class="bottomTittleSecondPage">
+                    Diferencial
+                </h3>
+                <p class="bottomParagraphSecondPage">
+                    Valorizamos a dedicação no atendimento, informações e negociações com o cliente. A NICKTHY FRETAMENTO E TURISMO prioriza a parceria com os nossos clientes, e o objetivo não é apenas prestar serviços de transporte, mas também, conquistar e fidelizar todos os clientes, captando novos parceiros. Desta forma, prezamos padrões de qualidade em todos os processos do transporte, tendo como resultado final a total solução do que propusemos fazer, bem como a completa satisfação do cliente.
+                </p>
             </div>
         </section>
 
