--- a/quemsomos.html
+++ b/quemsomos.html
@@ -11,17 +11,14 @@
   <link rel="shortcut icon" href="assets/favicon.svg" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Russo+One&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;700&family=Russo+One&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 
 <body>
     <header>
         <section>
-            <a href="#"><img src="assets/Cabeçalho/logo.svg" alt="NKLOGO"></a>
+            <a href="#"><img src="assets/Header/logo.svg" alt="NKLOGO"></a>
         </section>
         <nav>
         <ul id="nav-list" class="nav-list">
@@ -76,6 +73,26 @@
                 <p class="bottomParagraphSecondPage">
                     Valorizamos a dedicação no atendimento, informações e negociações com o cliente. A NICKTHY FRETAMENTO E TURISMO prioriza a parceria com os nossos clientes, e o objetivo não é apenas prestar serviços de transporte, mas também, conquistar e fidelizar todos os clientes, captando novos parceiros. Desta forma, prezamos padrões de qualidade em todos os processos do transporte, tendo como resultado final a total solução do que propusemos fazer, bem como a completa satisfação do cliente.
                 </p>
+                <div class="boxRow">
+                    <div class="box">
+                        <p class="boxTxtTittle">Missão</p>
+                        <p class="boxTxt">
+                            Atuar de forma transparente e responsável, a partir da prestação de serviços de transporte e logística, mantendo o foco permanente em qualificação, excelência e melhoria contínua, a fim de satisfazer plenamente as necessidades de nossos parceiros, contribuindo com seus resultados e com o desenvolvimento da sociedade.
+                        </p>
+                    </div>
+                    <div class="box">
+                        <p class="boxTxtTittle">Visão</p>
+                        <p class="boxTxt">
+                            Ser encarada como uma parceira de negócios de seus clientes, destacando-se pela qualidade, responsabilidade e eficácia na prestação dos serviços de transporte e logística.
+                        </p>
+                    </div>
+                    <div class="box">
+                        <p class="boxTxtTittle">Valores</p>
+                        <p class="boxTxt">
+                            Transparência; Ética; Organização; Valorização do Talento e Criatividade; Trabalho; Busca pelo Conhecimento e Qualificação; Prazer em Aprender; Gratidão.
+                        </p>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -96,10 +113,10 @@
                 </div>
             </div>
             <div id="icones-footer" class="col-sm">
-                <a href="#"><img src="assets/Rodapé/icon-whats.svg" alt=""></a>
-                <a href="#"><img src="assets/Rodapé/icon-email.svg" alt=""></a>
-                <a href="#"><img src="assets/Rodapé/icon-insta.svg" alt=""></a>
-                <a href="#"><img src="assets/Rodapé/icon-face.svg" alt=""></a>
+                <a href="#"><img src="assets/Footer" alt=""></a>
+                <a href="#"><img src="assets/Footer/icon-email.svg" alt=""></a>
+                <a href="#"><img src="assets/Footer/icon-insta.svg" alt=""></a>
+                <a href="#"><img src="assets/Footer/icon-face.svg" alt=""></a>
             </div>
             </div>
         </div>
@@ -114,9 +131,9 @@
                 <h2>Desenvolvido por <span>Pedro Andrade</span></h2>
             </div>
             <div id="jaba-icons" class="col-sm">
-                <a href="#"><img src="assets/Rodapé/jaba-whats.svg" alt=""></a>
-                <a href="#"><img src="assets/Rodapé/jaba-github.svg" alt=""></a>
-                <a href="#"><img src="assets/Rodapé/jaba-insta.svg" alt=""></a>
+                <a href="#"><img src="assets/Footer/jaba-whats.svg" alt=""></a>
+                <a href="#"><img src="assets/Footer/jaba-github.svg" alt=""></a>
+                <a href="#"><img src="assets/Footer/jaba-insta.svg" alt=""></a>
             </div>
             </div>
         </div>
