--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -58,7 +58,7 @@
   
       <section>
         <div class="sec1">
-          <div class="sec1txt">
+          <div >
             <h1>Serviços que <br>oferecemos</h1>            
           </div>
           <div class="sec1Img">
@@ -66,6 +66,7 @@
           </div>
         </div>
       </section>
+      
   
       <!-- section2 -->
   
