Fix:Ajuste de classes do html/css

--- a/quemsomos.html
+++ b/quemsomos.html
@@ -34,61 +34,67 @@
         </div>
         </nav>
     </header>
+
     <main>
-        <section class="mainBannerSecondPage">
-            <div class="mainBannerImgContainerSecondPage">
-                <img class="mainBannerImgSecondPage" src="assets/Quem Somos/firstBanner.png" alt="Exemplo de Imagem">
+        <section class="section-1-QS">
+            <div class="section-1-QS-container">
+                <div class="section-1-QS-imgBox">
+                    <img class="section-1-QS-img" src="assets/quem_somos/firstBanner.png" alt="Exemplo de Imagem">
+                </div>
             </div>
         </section>
-        <section class="middleTxtSecondPage">
-            <div class="middleTxtContainerSecondPage"> 
-                <div class="middleTxtTitleSecondPage">
+
+        <section class="section-2-QS">
+            <div class="section-2-QS-container">
+                <div class="section-2-QS-title">
                     <h1>Trabalhamos para melhorar a mobilidade das pessoas em todo o mundo</h1>
                 </div>
-                <div class="middleTxtParagraphSecondPage">
+                <div class="section-2-QS-text">
                     <p>Mobilizamos o mundo. É nossa força vital. Corre por nossas veias. É o que nos tira da cama todas as manhãs. Isso nos leva a reimaginar constantemente como podemos nos mover melhor. Para você. Por todos os destinos que te esperam. Por tudo o que você quer alcançar.</p>
                 </div>
             </div>
         </section>
-        <section class="middleBannerSecondPage">
-            <div class="middleBannerContainerSecondPage">
-                <div class="middleBannerTxtSecondPage">
-                    <p>
-                        Após estudos e análises do mercado no segmento de Transporte rodoviário de passageiros, constatamos que a segurança e qualidade são os principais fatores, tornando-se exigências primordiais dos clientes que utilizam tais serviços. Baseando-se nestes princípios a empresa NICKTHY FRETAMENTO E TURISMO LTDA- M.E foi criada, para proporcionar aos nossos clientes o que é fundamental no ramo. SEGURANÇA E QUALIDADE. Dispomos de estrutura veículos própios,veículos em parceria, representantes e agentes, direcionados para atuar em toda area de transporte de passageiros. A NICKTHY FRETAMENTO E TURISMO LTDA- M.E acredita reunir condições para atender as necessidades de sua empresa e a certeza de que formaremos muito mais que uma relação de negócios, mas uma parceria de sucesso. 
-                    </p>
-                    <h2 class="middleBannerTitleSecondPage">
+
+        <section class="section-3-QS">
+            <div class="section-3-QS-container">
+                <div class="section-3-QS-textBox">
+                    <p class="section-3-QS-textBox-text">
+                        Após estudos e análises do mercado no segmento de Transporte rodoviário de passageiros, constatamos que a segurança e qualidade são os principais fatores, tornando-se exigências primordiais dos clientes que utilizam tais serviços. Baseando-se nestes princípios a empresa NICKTHY FRETAMENTO E TURISMO LTDA- M.E foi criada, para proporcionar aos nossos clientes o que é fundamental no ramo. SEGURANÇA E QUALIDADE. Dispomos de estrutura veículos própios,veículos em parceria, representantes e agentes, direcionados para atuar em toda area de transporte de passageiros. A NICKTHY FRETAMENTO E TURISMO LTDA- M.E acredita reunir condições para atender as necessidades de sua empresa e a certeza de que formaremos muito mais que uma relação de negócios, mas uma parceria de sucesso. <br>
                         -Atenciosamente, Luiz Miralhes.
-                    </h2>
+                    </p>
                 </div>
-                <div>
-                    <img class="middleBannerImgSecondPage" src="assets/Quem Somos/middleBanner.png" alt="Exemplo de Imagem">
+                <div class="section-3-QS-imgBox">
+                    <img class="section-3-QS-img" src="assets/quem_somos/middleBanner.png" alt="Exemplo de Imagem">
                 </div>
             </div>
         </section>
-        <section class="bottomTxtSecondPage">
-            <div class="bottomTxtContainerSecondPage">
-                <h3 class="bottomTittleSecondPage">
-                    Diferencial
-                </h3>
-                <p class="bottomParagraphSecondPage">
-                    Valorizamos a dedicação no atendimento, informações e negociações com o cliente. A NICKTHY FRETAMENTO E TURISMO prioriza a parceria com os nossos clientes, e o objetivo não é apenas prestar serviços de transporte, mas também, conquistar e fidelizar todos os clientes, captando novos parceiros. Desta forma, prezamos padrões de qualidade em todos os processos do transporte, tendo como resultado final a total solução do que propusemos fazer, bem como a completa satisfação do cliente.
-                </p>
-                <div class="boxRow">
-                    <div class="box">
-                        <p class="boxTxtTittle">Missão</p>
-                        <p class="boxTxt">
+
+        <section class="section-4-QS">
+            <div class="section-4-QS-container">
+                <div class="section-4-QS-textBox">
+                    <h3 class="section-4-QS-textBox-title">
+                        Diferencial
+                    </h3>
+                    <p class="section-4-QS-textBox-text">
+                        Valorizamos a dedicação no atendimento, informações e negociações com o cliente. A NICKTHY FRETAMENTO E TURISMO prioriza a parceria com os nossos clientes, e o objetivo não é apenas prestar serviços de transporte, mas também, conquistar e fidelizar todos os clientes, captando novos parceiros. Desta forma, prezamos padrões de qualidade em todos os processos do transporte, tendo como resultado final a total solução do que propusemos fazer, bem como a completa satisfação do cliente.
+                    </p>
+                </div>
+                <div class="section-4-QS-boxRow">
+                    <div class="section-4-QS-boxRow-box">
+                        <p class="section-4-QS-boxRow-box-tittle">Missão</p>
+                        <p class="section-4-QS-boxRow-box-text">
                             Atuar de forma transparente e responsável, a partir da prestação de serviços de transporte e logística, mantendo o foco permanente em qualificação, excelência e melhoria contínua, a fim de satisfazer plenamente as necessidades de nossos parceiros, contribuindo com seus resultados e com o desenvolvimento da sociedade.
                         </p>
                     </div>
-                    <div class="box">
-                        <p class="boxTxtTittle">Visão</p>
-                        <p class="boxTxt">
+                    <div class="section-4-QS-boxRow-box">
+                        <p class="section-4-QS-boxRow-box-tittle">Visão</p>
+                        <p class="section-4-QS-boxRow-box-text">
                             Ser encarada como uma parceira de negócios de seus clientes, destacando-se pela qualidade, responsabilidade e eficácia na prestação dos serviços de transporte e logística.
                         </p>
                     </div>
-                    <div class="box">
-                        <p class="boxTxtTittle">Valores</p>
-                        <p class="boxTxt">
+                    <div class="section-4-QS-boxRow-box">
+                        <p class="section-4-QS-boxRow-box-tittle">Valores</p>
+                        <p class="section-4-QS-boxRow-box-text">
                             Transparência; Ética; Organização; Valorização do Talento e Criatividade; Trabalho; Busca pelo Conhecimento e Qualificação; Prazer em Aprender; Gratidão.
                         </p>
                     </div>
@@ -97,6 +103,7 @@
         </section>
 
     </main>
+
     <footer>
         <div class="rodape">
         <div class="container">
@@ -139,6 +146,7 @@
         </div>
         </div>
     </footer>
+
     <script src="js/menu.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
