--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -54,7 +54,7 @@
   <main>
     <article>
   
-      <!-- section1 -->
+      <!-- ===================== section1 ==============================================-->
   
       <section>
         <div class="sec1">
@@ -68,7 +68,7 @@
       </section>
       
   
-      <!-- section2 -->
+      <!-- ======================== section2 ==================================================-->
   
       <section>
         <div class="sec2">
@@ -88,7 +88,7 @@
         </div>
       </section>
   
-      <!-- section3 -->
+      <!-- ======================== section3 ==================================================-->
   
       <section class="section3">        
           <div class="sec3">
