Feat:Botão de WhatsApp

--- a/quemsomos.html
+++ b/quemsomos.html
@@ -36,6 +36,10 @@
     </header>
 
     <main>
+        <a class="whatsapp-link" href="https://wa.me/5521983578774" target="_blank">
+            <img src="assets/footer/icon-whats.svg" alt="" srcset="">
+        </a>
+        
         <section class="section-1-QS">
             <div class="section-1-QS-container">
                 <div class="section-1-QS-imgBox">
