Fix:Links para outras páginas

--- a/quemsomos.html
+++ b/quemsomos.html
@@ -22,10 +22,10 @@
         </section>
         <nav>
         <ul id="nav-list" class="nav-list">
-            <li class="item-list"><a class="nav-link" href="#">Home</a></li>
-            <li class="item-list"><a class="nav-link" href="#">Quem Somos</a></li>
-            <li class="item-list"><a class="nav-link" href="#">Serviços</a></li>
-            <li class="item-list"><a class="nav-link" href="#">Contato</a></li>
+            <li class="item-list"><a class="nav-link" href="/index.html">Home</a></li>
+            <li class="item-list"><a class="nav-link" href="quemsomos.html">Quem Somos</a></li>
+            <li class="item-list"><a class="nav-link" href="servicos.html">Serviços</a></li>
+            <li class="item-list"><a class="nav-link" href="contato.html">Contato</a></li>
         </ul>
         <div class="menu-icon">
             <div id="line-one" class="line-1"></div>
