Feat:Texto do primeiro banner

--- a/quemsomos.html
+++ b/quemsomos.html
@@ -42,8 +42,13 @@
         
         <section class="section-1-QS">
             <div class="section-1-QS-container">
+                <div class="section-1-QS-textBox">
+                    <p class="section-1-QS-text">
+                        Somos o que fazemos
+                    </p>
+                </div>
                 <div class="section-1-QS-imgBox">
-                    <img class="section-1-QS-img" src="assets/quem_somos/firstBanner.png" alt="Exemplo de Imagem">
+                    <img class="section-1-QS-img" src="assets/quem_somos/firstBanner.svg" alt="Exemplo de Imagem">
                 </div>
             </div>
         </section>
@@ -62,7 +67,7 @@
         <section class="section-3-QS">
             <div class="section-3-QS-container">
                 <div class="section-3-QS-textBox">
-                    <p class="section-3-QS-textBox-text">
+                    <p class="section-3-QS-text">
                         Após estudos e análises do mercado no segmento de Transporte rodoviário de passageiros, constatamos que a segurança e qualidade são os principais fatores, tornando-se exigências primordiais dos clientes que utilizam tais serviços. Baseando-se nestes princípios a empresa NICKTHY FRETAMENTO E TURISMO LTDA- M.E foi criada, para proporcionar aos nossos clientes o que é fundamental no ramo. SEGURANÇA E QUALIDADE. Dispomos de estrutura veículos própios,veículos em parceria, representantes e agentes, direcionados para atuar em toda area de transporte de passageiros. A NICKTHY FRETAMENTO E TURISMO LTDA- M.E acredita reunir condições para atender as necessidades de sua empresa e a certeza de que formaremos muito mais que uma relação de negócios, mas uma parceria de sucesso. <br>
                         -Atenciosamente, Luiz Miralhes.
                     </p>
