Responsivo da section 03

--- a/quemsomos.html
+++ b/quemsomos.html
@@ -60,7 +60,7 @@
                 </div>
             </div>
         </section>
-<!--
+
         <section class="section-3-QS">
             <div class="section-3-QS-container">
                 <div class="section-3-QS-textBox">
@@ -70,11 +70,11 @@
                     </p>
                 </div>
                 <div class="section-3-QS-imgBox">
-                    <img class="section-3-QS-img" src="assets/quem_somos/middleBanner.png" alt="Exemplo de Imagem">
+                    <img class="section-3-QS-img" src="assets/quem_somos/caneta.svg" alt="Exemplo de Imagem">
                 </div>
             </div>
         </section>
-
+<!--
         <section class="section-4-QS">
             <div class="section-4-QS-container">
                 <div class="section-4-QS-textBox">
