Responsivo Quem somos pronto

--- a/quemsomos.html
+++ b/quemsomos.html
@@ -65,7 +65,7 @@
             <div class="section-3-QS-container">
                 <div class="section-3-QS-textBox">
                     <p class="section-3-QS-text">
-                        Após estudos e análises do mercado no segmento de Transporte rodoviário de passageiros, constatamos que a segurança e qualidade são os principais fatores, tornando-se exigências primordiais dos clientes que utilizam tais serviços. Baseando-se nestes princípios a empresa NICKTHY FRETAMENTO E TURISMO LTDA- M.E foi criada, para proporcionar aos nossos clientes o que é fundamental no ramo. SEGURANÇA E QUALIDADE. Dispomos de estrutura veículos própios,veículos em parceria, representantes e agentes, direcionados para atuar em toda area de transporte de passageiros. A NICKTHY FRETAMENTO E TURISMO LTDA- M.E acredita reunir condições para atender as necessidades de sua empresa e a certeza de que formaremos muito mais que uma relação de negócios, mas uma parceria de sucesso. <br>
+                        Após estudos e análises do mercado no segmento de Transporte rodoviário de passageiros, constatamos que a segurança e qualidade são os principais fatores, tornando-se exigências primordiais dos clientes que utilizam tais serviços. Baseando-se nestes princípios a empresa NICKTHY FRETAMENTO E TURISMO LTDA- M.E foi criada, para proporcionar aos nossos clientes o que é fundamental no ramo. SEGURANÇA E QUALIDADE. Dispomos de estrutura veículos própios,veículos em parceria, representantes e agentes, direcionados para atuar em toda area de transporte de passageiros. A NICKTHY FRETAMENTO E TURISMO LTDA- M.E acredita reunir condições para atender as necessidades de sua empresa e a certeza de que formaremos muito mais que uma relação de negócios, mas uma parceria de sucesso. <br><br>
                         -Atenciosamente, Luiz Miralhes.
                     </p>
                 </div>
@@ -74,7 +74,7 @@
                 </div>
             </div>
         </section>
-<!--
+
         <section class="section-4-QS">
             <div class="section-4-QS-container">
                 <div class="section-4-QS-textBox">
@@ -107,7 +107,7 @@
                 </div>
             </div>
         </section>
--->
+
     </main>
 
     <footer>
