--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
   </header>
 
   <!-- ===================== Carrossel e Banners ============================= -->
-  
+
   <main>
     <div id="carouselnk" class="carousel slide carousel-fade" data-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active" data-interval="10000">
           <div class="containercar">
             <div class="imagemcar">
-              <img class="d-block w-100" src="assets/van 01 3.png" alt="Slide um">
+              <img class="d-block w-100" src="assets/home/van 01 3.png" alt="Slide um">
             </div>
             <div class="bloco">
-              <p>Conforto e <br>Segurança</p>
+              <p>Conforto e Segurança</p>
               <button type="button" class="btn btn-warning" href="#" role="button">
-                Conheça mais
+                <p>Conheça mais</p>
               </button>
             </div>
           </div>
@@ -70,12 +70,12 @@
         <div class="carousel-item" data-interval="10000">
           <div class="containercar">
             <div class="imagemcar">
-              <img src="assets/delivery-van-drives-city-logistics-moving-.jpg" alt="Slide dois">
+              <img class="d-block w-100" src="assets/home/van 01 3.png" alt="Slide dois">
             </div>
             <div class="bloco">
               <p>Viaje conosco</p>
               <button type="button" class="btn btn-warning" href="#" role="button">
-                Conheça mais
+                <p>Conheça mais</p>
               </button>
             </div>
           </div>
@@ -83,12 +83,12 @@
         <div class="carousel-item" data-interval="10000">
           <div class="containercar">
             <div class="imagemcar">
-              <img class="d-block w-100" src="assets/van 01 3.png" alt="Slide três">
+              <img class="d-block w-100" src="assets/home/van 01 3.png" alt="Slide três">
             </div>
             <div class="bloco">
               <p>Seja muito Bem Vindo</p>
               <button type="button" class="btn btn-warning" href="#" role="button">
-                Conheça mais
+                <p>Conheça mais</p>
               </button>
             </div>
           </div>
@@ -104,52 +104,56 @@
       </a>
     </div>
 
-    <!-- ====================== Section 2 =================================================== -->
-
     <section>
       <div class="middleBanner">
         <div class="middleTxt">
           <h1>Viagens para empresas</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit dignissimos eos cupiditate aliquid
-            ullam, cumque necessitatibus consequatur ex, deleniti incidunt molestias id qui veritatis obcaecati
-            voluptatum error? Aperiam, facere natus!</p>
+          <p>As viagens corporativas são fundamentais para empresas no Brasil e em todo o mundo. Quando falamos da
+            possibilidade de expandir os negócios além das fronteiras municipais, estaduais e até nacionais, também é
+            preciso contemplar a necessidade de enviar colaboradores e executivos para novos lugares. <br>
+            Mais do que isso, em um mundo globalizado, ainda há as grandes companhias que contam com sedes em diferentes
+            locais. Isso cria uma rede que envolve o deslocamento de milhões de pessoas e mais de um trilhão de dólares,
+            todos os anos, para compromissos de negócios. Logo, o setor de viagens corporativas cresceu desenfreadamente
+            ao longo dos últimos anos.</p>
         </div>
         <div class="middleImg">
-          <img src="assets/frotaVans.png" alt="Frota de Vans">
+          <img src="assets/home/image 2.svg" alt="Frota de Vans">
         </div>
       </div>
     </section>
-
-    <!-- ===================== Section 3 =================================================== -->
 
     <section>
       <div class="sec3">
         <div class="in-sec3">
           <div class="logos">
-
+            <div class="box1">
+              <img src="assets/home/image 3.svg" alt="logoEloM7">
+              <img src="assets/home/image 4.svg" alt="LogoCadastur">
+              <img src="assets/home/image 5.svg" alt="LogoDetro">
+            </div>
+            <div class="box2">
+              <img src="assets/home/image 6.svg" alt="LogoSeloVerde">
+              <img src="assets/home/image 7.svg" alt="LogoANTT">
+            </div>
           </div>
           <div class="bloco2">
-            <p>Preocupados com <br>
-              a sua segurança, <br>
-              onde quer que <br>
-              voçê vá</p>
+            <p>Preocupados com a sua segurança, onde quer que voçê vá</p>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- ===================== Section 4 =================================================== -->
-
     <section>
       <div class="bottomBanner">
         <div class="bottomImg">
-          <img src="assets/image 8.png" alt="Frota de Vans">
+          <img src="assets/home/image 8.svg" alt="Frota de Vans">
         </div>
         <div class="bottomTxt">
           <h1>Viagens e Turismo</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit dignissimos eos cupiditate aliquid
-            ullam, cumque necessitatibus consequatur ex, deleniti incidunt molestias id qui veritatis obcaecati
-            voluptatum error? Aperiam, facere natus!</p>
+          <p>Viajar também é cuidar das emoções, é aliviar o estresse, a ansiedade, cuidar da memória e sobretudo,
+            desenvolver a criatividade e a adaptabilidade. Muitos são os benefícios emocionais que poderíamos mencionar
+            e, provavelmente, muitos de nós já experimentamos isso e até viajamos para praticar o distanciamento do
+            cotidiano.</p>
         </div>
       </div>
     </section>
@@ -203,8 +207,8 @@
 
   <!-- ===================== Javascript ============================= -->
 
-  <script src="js/menu.js"></script>
-  <script src="js/cookie.js"></script>
+  <script src="/js/cookie.js"></script>
+  <script src="/js/menu.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
@@ -214,7 +218,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
     integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
-    
+
 
 </body>
 
