Add responsivo quem somos

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div class="bloco">
               <p>Viaje conosco</p>
               <button type="button" class="btn btn-warning" href="#" role="button">
-                <p>Conheça mais</p>
+                <p>Serviços</p>
               </button>
             </div>
           </div>
@@ -88,7 +88,7 @@
             <div class="bloco">
               <p>Seja muito Bem Vindo</p>
               <button type="button" class="btn btn-warning" href="#" role="button">
-                <p>Conheça mais</p>
+                <p>Contate-nos</p>
               </button>
             </div>
           </div>
