--- a/pages/quemsomos.html
+++ b/pages/quemsomos.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="/css/quemsomos.css">
   <link rel="shortcut icon" href="/assets/favicon.svg" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,11 +22,11 @@
 
 <body>
 
-   <!--====================== Botão do whatsapp =========================-->
+  <!--====================== Botão do whatsapp =========================-->
 
-   <a class="whatsapp-link" href="https://wa.me/5521983578774" target="_blank">
+  <a class="whatsapp-link" href="https://wa.me/5521983578774" target="_blank">
     <img src="/assets/icon-whats.svg" alt="" srcset="">
-</a>
+  </a>
 
   <!-- ===================== Cabeçalho ============================= -->
 
@@ -47,10 +48,101 @@
       </div>
     </nav>
   </header>
-  
+
   <!-- =========================== Principal ============================================ -->
 
-  
+  <main>
+    <a class="whatsapp-link" href="https://wa.me/5521983578774" target="_blank">
+      <img src="/assets/icon-whats.svg" alt="" srcset="">
+    </a>
+
+    <section class="section-1-QS">
+      <div class="section-1-QS-container">
+        <div class="section-1-QS-textBox">
+          <p class="section-1-QS-text">
+            Somos o que fazemos
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section class="section-2-QS">
+      <div class="section-2-QS-container">
+        <div class="section-2-QS-title">
+          <h1>Trabalhamos para melhorar a mobilidade das pessoas em todo o mundo</h1>
+        </div>
+        <div class="section-2-QS-text">
+          <p>Mobilizamos o mundo. É nossa força vital. Corre por nossas veias. É o que nos tira da cama todas as manhãs.
+            Isso nos leva a reimaginar constantemente como podemos nos mover melhor. Para você. Por todos os destinos
+            que te esperam. Por tudo o que você quer alcançar.</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="section-3-QS">
+      <div class="section-3-QS-container">
+        <div class="section-3-QS-textBox">
+          <p class="section-3-QS-text">
+            Após estudos e análises do mercado no segmento de Transporte rodoviário de passageiros, constatamos que a
+            segurança e qualidade são os principais fatores, tornando-se exigências primordiais dos clientes que
+            utilizam tais serviços. Baseando-se nestes princípios a empresa NICKTHY FRETAMENTO E TURISMO LTDA- M.E foi
+            criada, para proporcionar aos nossos clientes o que é fundamental no ramo. SEGURANÇA E QUALIDADE. Dispomos
+            de estrutura veículos própios,veículos em parceria, representantes e agentes, direcionados para atuar em
+            toda area de transporte de passageiros. A NICKTHY FRETAMENTO E TURISMO LTDA- M.E acredita reunir condições
+            para atender as necessidades de sua empresa e a certeza de que formaremos muito mais que uma relação de
+            negócios, mas uma parceria de sucesso. <br><br>
+            -Atenciosamente, Luiz Miralhes.
+          </p>
+        </div>
+        <div class="section-3-QS-imgBox">
+          <img class="section-3-QS-img" src="/assets/quem_somos/caneta.svg" alt="Exemplo de Imagem">
+        </div>
+      </div>
+    </section>
+
+    <section class="section-4-QS">
+      <div class="section-4-QS-container">
+        <div class="section-4-QS-textBox">
+          <h3 class="section-4-QS-textBox-title">
+            Diferencial
+          </h3>
+          <p class="section-4-QS-textBox-text">
+            Valorizamos a dedicação no atendimento, informações e negociações com o cliente. A NICKTHY FRETAMENTO E
+            TURISMO prioriza a parceria com os nossos clientes, e o objetivo não é apenas prestar serviços de
+            transporte, mas também, conquistar e fidelizar todos os clientes, captando novos parceiros. Desta forma,
+            prezamos padrões de qualidade em todos os processos do transporte, tendo como resultado final a total
+            solução do que propusemos fazer, bem como a completa satisfação do cliente.
+          </p>
+        </div>
+        <div class="section-4-QS-boxRow">
+          <div class="section-4-QS-boxRow-box">
+            <p class="section-4-QS-boxRow-box-tittle">Missão</p>
+            <p class="section-4-QS-boxRow-box-text">
+              Atuar de forma transparente e responsável, a partir da prestação de serviços de transporte e logística,
+              mantendo o foco permanente em qualificação, excelência e melhoria contínua, a fim de satisfazer plenamente
+              as necessidades de nossos parceiros, contribuindo com seus resultados e com o desenvolvimento da
+              sociedade.
+            </p>
+          </div>
+          <div class="section-4-QS-boxRow-box">
+            <p class="section-4-QS-boxRow-box-tittle">Visão</p>
+            <p class="section-4-QS-boxRow-box-text">
+              Ser encarada como uma parceira de negócios de seus clientes, destacando-se pela qualidade,
+              responsabilidade e eficácia na prestação dos serviços de transporte e logística.
+            </p>
+          </div>
+          <div class="section-4-QS-boxRow-box">
+            <p class="section-4-QS-boxRow-box-tittle">Valores</p>
+            <p class="section-4-QS-boxRow-box-text">
+              Transparência; Ética; Organização; Valorização do Talento e Criatividade; Trabalho; Busca pelo
+              Conhecimento e Qualificação; Prazer em Aprender; Gratidão.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+  </main>
 
   <!-- ===================== Footer para todas as páginas ============================= -->
 
