--- a/pages/contato.html
+++ b/pages/contato.html
@@ -98,8 +98,7 @@
       <section class="mapa">
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3675.411886936005!2d-43.10233414295012!3d-22.89817391008284!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9983f15f1dd263%3A0x7875d776430bd72f!2sR.%20Noronha%20Torrez%C3%A3o%2C%2020%20-%20Santa%20Rosa%2C%20Niter%C3%B3i%20-%20RJ%2C%2024240-182!5e0!3m2!1spt-BR!2sbr!4v1668973734682!5m2!1spt-BR!2sbr"
-          style="border:0;" allowfullscreen="" loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"></iframe>
+          style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <p>NICKTHY FRETAMENTO E TURISMO LTDA- M.E <br>
           Endereço: RUA NORONHA TORREZÃO, 20 – SANTA ROSA – NITEROI <br>
           RJ CEP: 24240-185 <br>
@@ -157,7 +156,10 @@
 
   <!-- ===================== Javascript ============================= -->
 
+  <script src="/js/cookie.js"></script>
   <script src="/js/menu.js"></script>
+  <script src="https://unpkg.com/scrollreveal"></script>
+  <script src="/js/configScroll.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
