--- a/pages/contato.html
+++ b/pages/contato.html
@@ -17,6 +17,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Russo+One&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css"
+    href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
 
 </head>
 
@@ -156,6 +158,8 @@
 
   <!-- ===================== Javascript ============================= -->
 
+  <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
+  <script src="/js/cookie.js"></script>
   <script src="/js/cookie.js"></script>
   <script src="/js/menu.js"></script>
   <script src="https://unpkg.com/scrollreveal"></script>
