--- a/pages/termos.html
+++ b/pages/termos.html
@@ -17,6 +17,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Russo+One&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css"
+    href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
 </head>
 
 <body>
@@ -330,7 +332,8 @@
 
   <!-- ===================== Javascript ============================= -->
 
-
+  <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
+  <script src="/js/cookie.js"></script>
   <script src="/js/cookie.js"></script>
   <script src="/js/menu.js"></script>
   <script src="https://unpkg.com/scrollreveal"></script>
