Pronto para revisão

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <!--====================== Botão do whatsapp =========================-->
 
-  <a class="whatsapp-link" href="https://wa.me/5521983578774" target="_blank">
+  <a class="whatsapp-link" href="https://wa.me/5521964322624" target="_blank">
     <img src="assets/icon-whats.svg" alt="" srcset="">
   </a>
 
@@ -34,7 +34,7 @@
 
   <header>
     <section>
-      <a href="#"><img src="assets/logo.svg" alt="NKLOGO"></a>
+      <a href="index.html"><img src="assets/logo.svg" alt="NKLOGO"></a>
     </section>
     <nav>
       <ul id="nav-list" class="nav-list">
@@ -56,16 +56,16 @@
   <main>
     <div id="carouselnk" class="carousel slide carousel-fade" data-ride="carousel">
       <div class="carousel-inner">
-        <div class="carousel-item active" data-interval="10000">
+        <div class="carousel-item" data-interval="10000">
           <div class="containercar">
             <div class="imagemcar">
               <img class="d-block w-100" src="assets/home/van 01 3.png" alt="Slide um">
             </div>
             <div class="bloco">
               <p>Conforto e Segurança</p>
-              <button type="button" class="btn btn-warning" href="#" role="button">
-                <p>Conheça mais</p>
-              </button>
+              <a href="/pages/quemsomos.html"><button type="submit" class="btn btn-warning" role="button">
+                  <p>Conheça mais</p>
+                </button></a>
             </div>
           </div>
         </div>
@@ -76,22 +76,22 @@
             </div>
             <div class="bloco">
               <p>Viaje conosco</p>
-              <button type="button" class="btn btn-warning" href="#" role="button">
-                <p>Serviços</p>
-              </button>
+              <a href="/pages/servicos.html"><button type="submit" class="btn btn-warning" role="button">
+                  <p>Serviços</p>
+                </button></a>
             </div>
           </div>
         </div>
-        <div class="carousel-item" data-interval="10000">
+        <div class="carousel-item active" data-interval="10000">
           <div class="containercar">
             <div class="imagemcar">
               <img class="d-block w-100" src="assets/home/van 01 3.png" alt="Slide três">
             </div>
             <div class="bloco">
               <p>Seja muito Bem Vindo</p>
-              <button type="button" class="btn btn-warning" href="#" role="button">
-                <p>Contate-nos</p>
-              </button>
+              <a href="/pages/contato.html"><button type="submit" class="btn btn-warning" role="button">
+                  <p>Contate-nos</p>
+                </button></a>
             </div>
           </div>
         </div>
@@ -172,18 +172,18 @@
             <h1 id="titulo-footer"><a href="index.html">NK</a></h1>
             <div class="col-sm">
               <ul id="lista-footer">
-                <li><a href="quemsomos.html">Quem Somos</a></li>
-                <li><a href="servicos.html">Serviços</a></li>
-                <li><a href="pages/contato.html">Contato</a></li>
-                <li><a href="termos e privacidade.html">Termos e Privacidade</a></li>
+                <li><a href="/pages/quemsomos.html">Quem Somos</a></li>
+                <li><a href="/pages/servicos.html">Serviços</a></li>
+                <li><a href="/pages/contato.html">Contato</a></li>
+                <li><a href="/pages/termos.html">Termos e Privacidade</a></li>
               </ul>
             </div>
           </div>
           <div id="icones-footer" class="col-sm">
-            <a href="#"><img src="assets/icon-whats.svg" alt=""></a>
-            <a href="#"><img src="assets/icon-email.svg" alt=""></a>
-            <a href="#"><img src="assets/icon-insta.svg" alt=""></a>
-            <a href="#"><img src="assets/icon-face.svg" alt=""></a>
+            <a href="https://wa.me/5521964322624" target="_blank"><img src="assets/icon-whats.svg" alt=""></a>
+            <a href="mailto:contato@nkturismo.com.br" target="_blank"><img src="assets/icon-email.svg" alt=""></a>
+            <a href="https://www.instagram.com/corporativo.turistico.eventos/" target="_blank"><img src="assets/icon-insta.svg" alt=""></a>
+            <a href="#" target="_blank"><img src="assets/icon-face.svg" alt=""></a>
           </div>
         </div>
       </div>
@@ -198,9 +198,9 @@
             <h2>Desenvolvido por <span>Pedro Andrade</span></h2>
           </div>
           <div id="jaba-icons" class="col-sm">
-            <a href="#"><img src="assets/jaba-whats.svg" alt=""></a>
-            <a href="#"><img src="assets/jaba-github.svg" alt=""></a>
-            <a href="#"><img src="assets/jaba-insta.svg" alt=""></a>
+            <a href="https://wa.me/5521983578774" target="_blank"><img src="assets/jaba-whats.svg" alt=""></a>
+            <a href="https://github.com/PedroAndradeOriginal" target="_blank"><img src="assets/jaba-github.svg" alt=""></a>
+            <a href="https://www.instagram.com/pedro_andrade_se/?hl=pt" target="_blank"><img src="assets/jaba-insta.svg" alt=""></a>
           </div>
         </div>
       </div>
