--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -26,7 +26,7 @@
 
   <!--====================== Botão do whatsapp =========================-->
 
-  <a class="whatsapp-link" href="https://wa.me/5521983578774" target="_blank">
+  <a class="whatsapp-link" href="https://wa.me/5521964322624" target="_blank">
     <img src="/assets/icon-whats.svg" alt="" srcset="">
   </a>
 
@@ -34,7 +34,7 @@
 
   <header>
     <section>
-      <a href="#"><img src="/assets/logo.svg" alt="NKLOGO"></a>
+      <a href="/index.html"><img src="/assets/logo.svg" alt="NKLOGO"></a>
     </section>
     <nav>
       <ul id="nav-list" class="nav-list">
@@ -212,15 +212,15 @@
                 <li><a href="quemsomos.html">Quem Somos</a></li>
                 <li><a href="servicos.html">Serviços</a></li>
                 <li><a href="contato.html">Contato</a></li>
-                <li><a href="termos e privacidade.html">Termos e Privacidade</a></li>
+                <li><a href="termos.html">Termos e Privacidade</a></li>
               </ul>
             </div>
           </div>
           <div id="icones-footer" class="col-sm">
-            <a href="#"><img src="/assets/icon-whats.svg" alt=""></a>
-            <a href="#"><img src="/assets/icon-email.svg" alt=""></a>
-            <a href="#"><img src="/assets/icon-insta.svg" alt=""></a>
-            <a href="#"><img src="/assets/icon-face.svg" alt=""></a>
+            <a href="https://wa.me/5521964322624" target="_blank"><img src="/assets/icon-whats.svg" alt=""></a>
+            <a href="mailto:contato@nkturismo.com.br" target="_blank"><img src="/assets/icon-email.svg" alt=""></a>
+            <a href="https://www.instagram.com/corporativo.turistico.eventos/" target="_blank"><img src="/assets/icon-insta.svg" alt=""></a>
+            <a href="#" target="_blank"><img src="/assets/icon-face.svg" alt=""></a>
           </div>
         </div>
       </div>
@@ -235,9 +235,9 @@
             <h2>Desenvolvido por <span>Pedro Andrade</span></h2>
           </div>
           <div id="jaba-icons" class="col-sm">
-            <a href="#"><img src="/assets/jaba-whats.svg" alt=""></a>
-            <a href="#"><img src="/assets/jaba-github.svg" alt=""></a>
-            <a href="#"><img src="/assets/jaba-insta.svg" alt=""></a>
+            <a href="https://wa.me/5521983578774" target="_blank"><img src="/assets/jaba-whats.svg" alt=""></a>
+            <a href="https://github.com/PedroAndradeOriginal" target="_blank"><img src="/assets/jaba-github.svg" alt=""></a>
+            <a href="https://www.instagram.com/pedro_andrade_se/?hl=pt" target="_blank"><img src="/assets/jaba-insta.svg" alt=""></a>
           </div>
         </div>
       </div>
