--- a/pages/termos.html
+++ b/pages/termos.html
@@ -25,15 +25,15 @@
 
   <!--====================== Botão do whatsapp =========================-->
 
-  <a class="whatsapp-link" href="https://wa.me/5521983578774" target="_blank">
+  <a class="whatsapp-link" href="https://wa.me/5521964322624" target="_blank">
     <img src="/assets/icon-whats.svg" alt="" srcset="">
-</a>
+  </a>
 
   <!-- ===================== Cabeçalho ============================= -->
 
   <header>
     <section>
-      <a href="#"><img src="/assets/logo.svg" alt="NKLOGO"></a>
+      <a href="/index.html"><img src="/assets/logo.svg" alt="NKLOGO"></a>
     </section>
     <nav>
       <ul id="nav-list" class="nav-list">
@@ -303,10 +303,10 @@
             </div>
           </div>
           <div id="icones-footer" class="col-sm">
-            <a href="#"><img src="/assets/icon-whats.svg" alt=""></a>
-            <a href="#"><img src="/assets/icon-email.svg" alt=""></a>
-            <a href="#"><img src="/assets/icon-insta.svg" alt=""></a>
-            <a href="#"><img src="/assets/icon-face.svg" alt=""></a>
+            <a href="https://wa.me/5521964322624" target="_blank"><img src="/assets/icon-whats.svg" alt=""></a>
+            <a href="mailto:contato@nkturismo.com.br" target="_blank"><img src="/assets/icon-email.svg" alt=""></a>
+            <a href="https://www.instagram.com/corporativo.turistico.eventos/" target="_blank"><img src="/assets/icon-insta.svg" alt=""></a>
+            <a href="#" target="_blank"><img src="/assets/icon-face.svg" alt=""></a>
           </div>
         </div>
       </div>
@@ -321,9 +321,9 @@
             <h2>Desenvolvido por <span>Pedro Andrade</span></h2>
           </div>
           <div id="jaba-icons" class="col-sm">
-            <a href="#"><img src="/assets/jaba-whats.svg" alt=""></a>
-            <a href="#"><img src="/assets/jaba-github.svg" alt=""></a>
-            <a href="#"><img src="/assets/jaba-insta.svg" alt=""></a>
+            <a href="https://wa.me/5521983578774" target="_blank"><img src="/assets/jaba-whats.svg" alt=""></a>
+            <a href="https://github.com/PedroAndradeOriginal" target="_blank"><img src="/assets/jaba-github.svg" alt=""></a>
+            <a href="https://www.instagram.com/pedro_andrade_se/?hl=pt" target="_blank"><img src="/assets/jaba-insta.svg" alt=""></a>
           </div>
         </div>
       </div>
