--- a/pages/contato.html
+++ b/pages/contato.html
@@ -66,8 +66,8 @@
           <h2>Nos siga nas nossas redes sociais</h2>
         </div>
         <div id="img-redes">
-          <a href=""><img src="/assets/whatsblue.svg" alt=""></a>
-          <a href=""><img src="/assets/instablue.svg" alt=""></a>
+          <a href="https://wa.me/5521964322624"><img src="/assets/whatsblue.svg" alt=""></a>
+          <a href="https://www.instagram.com/corporativo.turistico.eventos/"><img src="/assets/instablue.svg" alt=""></a>
           <a href=""><img src="/assets/faceblue.svg" alt=""></a>
         </div>
       </section>
