limpesa pasta Assets Img

--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/home.css">
+  <link rel="stylesheet" href="assets/Home/image">
   <link rel="shortcut icon" href="assets/favicon.svg" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/Home/" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Russo+One&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css"
+  <link rel="stylesheet" type="/text/css"
     href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
 
 </head>
@@ -122,7 +124,7 @@
             ao longo dos últimos anos.</p>
         </div>
         <div class="middleImg">
-          <img src="assets/home/image 2.svg" alt="Frota de Vans">
+          <img src="assets/Home/image 2.svg" alt="Frota de Vans">
         </div>
       </div>
     </section>
