FIx endereços IMG

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="carousel-item" data-interval="10000">
           <div class="containercar">
             <div class="imagemcar">
-              <img class="d-block w-100" src="assets/home/van 01 3.png" alt="Slide um">
+              <img class="d-block w-100" src="assets/Home/van 01 3.png" alt="Slide um">
             </div>
             <div class="bloco">
               <p>Conforto e Segurança</p>
@@ -72,7 +72,7 @@
         <div class="carousel-item" data-interval="10000">
           <div class="containercar">
             <div class="imagemcar">
-              <img class="d-block w-100" src="assets/home/van 01 3.png" alt="Slide dois">
+              <img class="d-block w-100" src="assets/Home/van 01 3.png" alt="Slide dois">
             </div>
             <div class="bloco">
               <p>Viaje conosco</p>
@@ -85,7 +85,7 @@
         <div class="carousel-item active" data-interval="10000">
           <div class="containercar">
             <div class="imagemcar">
-              <img class="d-block w-100" src="assets/home/van 01 3.png" alt="Slide três">
+              <img class="d-block w-100" src="assets/Home/van 01 3.png" alt="Slide três">
             </div>
             <div class="bloco">
               <p>Seja muito Bem Vindo</p>
@@ -119,7 +119,7 @@
             ao longo dos últimos anos.</p>
         </div>
         <div class="middleImg">
-          <img src="assets/home/image 2.svg" alt="Frota de Vans">
+          <img src="assets/Home/image 2.svg" alt="Frota de Vans">
         </div>
       </div>
     </section>
@@ -129,13 +129,13 @@
         <div class="in-sec3">
           <div class="logos">
             <div class="box1">
-              <img src="assets/home/image 3.svg" alt="logoEloM7">
-              <img src="assets/home/image 4.svg" alt="LogoCadastur">
-              <img src="assets/home/image 5.svg" alt="LogoDetro">
+              <img src="assets/Home/image 3.svg" alt="logoEloM7">
+              <img src="assets/Home/image 4.svg" alt="LogoCadastur">
+              <img src="assets/Home/image 5.svg" alt="LogoDetro">
             </div>
             <div class="box2">
-              <img src="assets/home/image 6.svg" alt="LogoSeloVerde">
-              <img src="assets/home/image 7.svg" alt="LogoANTT">
+              <img src="assets/Home/image 6.svg" alt="LogoSeloVerde">
+              <img src="assets/Home/image 7.svg" alt="LogoANTT">
             </div>
           </div>
           <div class="bloco2">
@@ -148,7 +148,7 @@
     <section>
       <div class="bottomBanner">
         <div class="bottomImg">
-          <img src="assets/home/image 8.svg" alt="Frota de Vans">
+          <img src="assets/Home/image 8.svg" alt="Frota de Vans">
         </div>
         <div class="bottomTxt">
           <h1>Viagens e Turismo</h1>
