--- a/index.html
+++ b/index.html
@@ -134,13 +134,13 @@
         <div class="in-sec3">
           <div class="logos">
             <div class="box1">
-              <img src="assets/home/image 3.svg" alt="logoEloM7">
-              <img src="assets/home/image 4.svg" alt="LogoCadastur">
-              <img src="assets/home/image 5.svg" alt="LogoDetro">
+              <img src="assets/Home/image 3.svg" alt="logoEloM7">
+              <img src="assets/Home/image 4.svg" alt="LogoCadastur">
+              <img src="assets/Home/image 5.svg" alt="LogoDetro">
             </div>
             <div class="box2">
-              <img src="assets/home/image 6.svg" alt="LogoSeloVerde">
-              <img src="assets/home/image 7.svg" alt="LogoANTT">
+              <img src="assets/Home/image 6.svg" alt="LogoSeloVerde">
+              <img src="assets/Home/image 7.svg" alt="LogoANTT">
             </div>
           </div>
           <div class="bloco2">
@@ -153,7 +153,7 @@
     <section>
       <div class="bottomBanner">
         <div class="bottomImg">
-          <img src="assets/home/image 8.svg" alt="Frota de Vans">
+          <img src="assets/Home/image 8.svg" alt="Frota de Vans">
         </div>
         <div class="bottomTxt">
           <h1>Viagens e Turismo</h1>
