--- a/pages/servicos.html
+++ b/pages/servicos.html
@@ -64,7 +64,7 @@
             <h1>Serviços que oferecemos</h1>
           </div>
           <div class="sec1Img">
-            <img src="/assets/image 10.svg" alt="motorista na van">
+            <img src="/assets/Servicos.svg" alt="motorista na van">
           </div>
         </div>
       </section>
@@ -94,7 +94,7 @@
       <section class="section3">
         <div class="sec3">
           <div class="blocosec3">
-            <img src="/assets/image 11.svg" alt="estrutura organizacional">
+            <img src="/assets/Estrutura.svg" alt="estrutura organizacional">
             <div class="blocosec3B">
               <h2> Estrutura Organizacional</h2>
               <p>
@@ -105,7 +105,7 @@
             </div>
           </div>
           <div class="blocosec3">
-            <img src="/assets/image 12.svg" alt="Nossa frota img">
+            <img src="/assets/NossaFrota.svg" alt="Nossa frota img">
             <div class="blocosec3B">
               <h2>Nossa Frota</h2>
               <p>Nossa frota, incluindo parcerias, possui veículos novos e seminovos, monitorados via satélite com
