--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
   <main>
     <div class="videoNK">
-      <video width="100%" height="420px"  class ="videonk" src="assets/videos/projetoVideoNK.mp4" autoplay loop muted poster="assets/videos/posterVideo.png"></video>
+      <video width="100%" height="608px"  class ="videonk" src="assets/videos/projetoVideoNK.mp4" autoplay loop muted poster="assets/videos/posterVideo.png"></video>
     </div>
 
 
@@ -101,7 +101,7 @@
     <section>
       <div class="bottomBanner">
         <div class="bottomImg">
-          <img src="assets/Home/image 8.svg" alt="Frota de Vans">
+          <img id="viagensTurismoIMG" src="assets/Home/ViagensTurismoIMG.svg" alt="Frota de Vans">
         </div>
         <div class="bottomTxt">
           <h1>Viagens e Turismo</h1>
