Limpeza de fotos provisórias

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <section>
       <div class="bottomBanner">
         <div class="bottomImg">
-          <img id="viagensTurismoIMG" src="assets/Home/ViagensTurismoIMG.svg" alt="Frota de Vans">
+          <img src="assets/Home/ViagensTurismoIMG.svg" alt="Frota de Vans" >
         </div>
         <div class="bottomTxt">
           <h1>Viagens e Turismo</h1>
